--- a/.github/workflows/issue-status-to-slack.yml
+++ b/.github/workflows/issue-status-to-slack.yml
@@ -1,8 +1,71 @@
-name: Issue status → Slack (reuse)
+name: Issue status → Slack
+
 on:
   issues:
     types: [labeled]
+
+permissions:
+  issues: read
+  contents: read
+
 jobs:
-  call:
-    uses: PorticoEstate/.github/.github/workflows/notify-slack.yml@main
-    secrets: inherit
+  notify:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Decide recipients and message
+        id: decide
+        uses: actions/github-script@v7
+        env:
+          HENNING_ID: U02M2VD4TGF
+          SIGURD_ID:  U071XLNGX0C
+          REIDAR_ID:  U071XLNT7FE
+          ARILD_ID:   U05QQN2LCJU
+          GEIR_ID:    U071EKRU97H
+        with:
+          script: |
+            const raw = (context.payload.label?.name || '').trim();
+            const l = raw.toLowerCase();
+            const issue = context.payload.issue;
+            const { html_url:url, title, number } = issue;
+
+            const assignees = (issue.assignees || []).map(a => (a.login || '').toLowerCase());
+            const hasHenning = assignees.includes('promises');
+            const hasSigurd  = assignees.includes('sigurdne');
+
+            const isReadyForTest = ['klar for testing','klar for test'].includes(l);
+            const isTestFailed   = l === 'test feilet';
+            const isReadyStage   = l === 'klar for stage';
+            const isProdAll      = ['klar for prod - alle','prod deploy alle'].includes(l);
+            const isProdInst     = ['klar for prod - instans','prod deploy stavanger','prod deploy bergen'].includes(l);
+
+            let mentions = [], message = null;
+
+            if (isReadyForTest) {
+              mentions = [process.env.ARILD_ID, process.env.GEIR_ID];
+              message = `[#${number}] “${title}” er *Klar for testing* (deployet i Test). ${url}`;
+            } else if (isTestFailed || isReadyStage) {
+              if (hasHenning) mentions = [process.env.HENNING_ID];
+              else if (hasSigurd) mentions = [process.env.SIGURD_ID];
+              const prefix = isTestFailed ? 'TEST FEILET' : 'Godkjent i test – Klar for Stage';
+              message = `[#${number}] ${prefix}: “${title}”. ${url}`;
+            } else if (isProdAll || isProdInst) {
+              mentions = [process.env.REIDAR_ID];
+              message = `[#${number}] ${raw}: “${title}”. ${url}`;
+            }
+
+            if (!message) { core.setOutput('skip','true'); }
+            else {
+              core.setOutput('skip','false');
+              core.setOutput('mentions', mentions.filter(Boolean).map(id => `<@${id}>`).join(' '));
+              core.setOutput('message', message);
+            }
+
+      - name: Post to Slack
+        if: steps.decide.outputs.skip == 'false'
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+          slack-message: >-
+            ${{ steps.decide.outputs.mentions }} ${{ steps.decide.outputs.message }}
+        env:
+          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
