--- a/.github/workflows/issue-status-to-slack.yml
+++ b/.github/workflows/issue-status-to-slack.yml
@@ -64,11 +64,17 @@ jobs:
               core.setOutput('message', message);
             }
 
-      - name: Post to Slack
-        if: steps.decide.outputs.skip == 'false'
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-message: ${{ steps.decide.outputs.mentions }} ${{ steps.decide.outputs.message }}
-        env:
-          SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
+  - name: Post to Slack (no preview)
+  if: steps.decide.outputs.skip == 'false'
+  uses: slackapi/slack-github-action@v1.24.0
+  with:
+    channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
+    slack-message: >-
+      ${{ steps.decide.outputs.mentions }} ${{ steps.decide.outputs.message }}
+    payload: |
+      {
+        "unfurl_links": false,
+        "unfurl_media": false
+      }
+  env:
+    SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
