--- a/.github/workflows/issue-status-to-slack.yml
+++ b/.github/workflows/issue-status-to-slack.yml
@@ -17,6 +17,7 @@ jobs:
         id: decide
         uses: actions/github-script@v7
         env:
+          # Slack user IDs
           ARILD_ID:   U05QQN2LCJU
           GEIR_ID:    U071EKRU97H
           HENNING_ID: U02M2VD4TGF
@@ -24,37 +25,52 @@ jobs:
           REIDAR_ID:  U071XLNT7FE
         with:
           script: |
-            const node = context.payload.issue;
-            if (!node) { core.setOutput('skip','true'); return; }
+            const issue = context.payload.issue;
+            if (!issue) { core.setOutput('skip','true'); return; }
 
-            const labelRaw = (context.payload.label?.name || '').trim();
-            const l = labelRaw.toLowerCase();
-            const { html_url:url, title, number } = node;
+            // Normaliser label ("–"/"—" → "-", multiple spaces → one)
+            const raw = (context.payload.label?.name || '').trim();
+            const l = raw
+              .toLowerCase()
+              .replace(/[\u2013\u2014]/g, '-')  // en/em dash -> hyphen
+              .replace(/\s+/g, ' ')
+              .trim();
 
-            const assignees = (node.assignees || []).map(a => (a.login || '').toLowerCase());
+            const { html_url:url, title, number } = issue;
+
+            // Assignees
+            const assignees = (issue.assignees || []).map(a => (a.login || '').toLowerCase());
             const hasHenning = assignees.includes('promises');
             const hasSigurd  = assignees.includes('sigurdne');
 
-            const isReadyForTest = ['klar for testing','klar for test'].includes(l);
-            const isTestFailed   = l === 'test feilet';
-            const isReadyStage   = l === 'klar for stage';
-            const isProdAll      = ['prod deploy - alle','klar for prod - alle','prod deploy alle'].includes(l);
-            const isProdInst     = ['prod deploy - instans','klar for prod - instans','prod deploy stavanger','prod deploy bergen'].includes(l);
+            // Match nye statuser
+            const isReadyTest_Test   = (l === 'klar for test - test');
+            const isFail_Test        = (l === 'test feilet - test');
+            const isReadyStage       = (l === 'klar for stage');
+            const isReadyTest_Stage  = (l === 'klar for test - stage');
+            const isFail_Stage       = (l === 'test feilet - stage');
+            const isReadyProd        = (l === 'klar for prod');
 
             let mentions = [];
             let message  = null;
 
-            if (isReadyForTest) {
+            if (isReadyTest_Test) {
               mentions = [process.env.ARILD_ID, process.env.GEIR_ID];
-              message  = `[#${number}] “${title}” er *Klar for testing* (deployet i Test). ${url}`;
-            } else if (isTestFailed || isReadyStage) {
+              message  = `[#${number}] “${title}” er *Klar for test – Test*. ${url}`;
+            } else if (isReadyTest_Stage) {
+              mentions = [process.env.ARILD_ID, process.env.GEIR_ID];
+              message  = `[#${number}] “${title}” er *Klar for test – Stage*. ${url}`;
+            } else if (isFail_Test || isFail_Stage || isReadyStage) {
+              // Henning prioriteres hvis begge er assignees
               if (hasHenning) mentions = [process.env.HENNING_ID];
               else if (hasSigurd) mentions = [process.env.SIGURD_ID];
-              const prefix = isTestFailed ? 'TEST FEILET' : 'Godkjent i test – Klar for Stage';
+              const prefix =
+                isReadyStage ? 'Klar for Stage'
+                : (isFail_Test ? 'Test feilet – Test' : 'Test feilet – Stage');
               message = `[#${number}] ${prefix}: “${title}”. ${url}`;
-            } else if (isProdAll || isProdInst) {
+            } else if (isReadyProd) {
               mentions = [process.env.REIDAR_ID];
-              message  = `[#${number}] ${labelRaw}: “${title}”. ${url}`;
+              message  = `[#${number}] Klar for prod: “${title}”. ${url}`;
             }
 
             if (!message || mentions.length === 0) {
@@ -69,7 +85,7 @@ jobs:
         if: steps.decide.outputs.skip == 'false'
         uses: slackapi/slack-github-action@v1.24.0
         with:
-          channel-id: C05PUDLBV38  # <- hardkodet kanal
+          channel-id: C05PUDLBV38  # ny kanal
           payload: |
             {
               "text": "${{ steps.decide.outputs.mentions }} ${{ steps.decide.outputs.message }}",
